--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/estilo.css">
-<link rel="stylesheet" href="css/responsivo.css">
+<link rel="stylesheet" href="estilo.css">
+<link rel="stylesheet" href="responsivo.css">
     <title>Agência Fake</title>
 </head>
 <body>
@@ -30,7 +30,8 @@
       <a href="#" class="contact-btn">Contrate Agora</a>
     </div>
     <div class="img-headline">
-         <img style="max-width: 90%;"      src="fotos-1/computador.jpg">
+         <img style="height: 300px; width: 300px; border-radius: 10px;  margin-top: 15px;"      src="fotos/loja.jpg">
+         <img style="height: 300px; width: 300px; border-radius: 10px; margin-top: 15px; "      src="fotos/loja2.jpg">
 
     </div>
 </header>
@@ -40,7 +41,7 @@
 <div class="Serviços">
 
 <div class="card">
-    <img src="notebook (3).png">
+    <img src="fotos/not.png">
     <div class="card-text">
     <h3>concertos de notebooks</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint saepe facilis impedit reiciendis earum architecto dignissimos recusandae vitae, aliquam officiis pariatur, accusamus quia dolore praesentium eligendi, eum assumenda nam incidunt!</p>
       </div>
@@ -51,7 +52,7 @@
 
 <div class="card">
     
-    <img src="smartphone (1).png">
+    <img src="fotos/cel.png">
     <div class="card-text">
     <h3>  concertos de celulares</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint saepe facilis impedit reiciendis earum architecto dignissimos recusandae vitae, aliquam officiis pariatur, accusamus quia dolore praesentium eligendi, eum assumenda nam incidunt!</p>
          </div>
@@ -63,7 +64,7 @@
 </div>
 
 <div class="card">
-    <img src="capa-de-celular (1).png">
+    <img src="fotos/capa.png">
    <div class="card-text">
     <h3>venda de acessorrios</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint saepe facilis impedit reiciendis earum architecto dignissimos recusandae vitae, aliquam officiis pariatur, accusamus quia dolore praesentium eligendi, eum assumenda nam incidunt!</p>
 </div>
