responsivo do BT orçamento

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="estilo.css">
 <link rel="stylesheet" href="responsivo.css">
+
     <title>Agência Fake</title>
 </head>
 <body>
@@ -27,8 +28,8 @@
     <div class="headline">
       <h2  style="letter-spacing: 15px; color: white;"   >Você achou a melhor</h2>
       <h2  style="font-size: 60px;" >Assistecia Tecnica</h2>
-      <p>desde de 1998 no mercado, trabalhmos com confiança e dediçao para que seus aparelhos fiquem da melhor forma,,, shbdbebdgshcbdfvbisubvbdsfcduncudbvyibvhdshojfofurhfurhvuowejsvshrofns</p>
-      <a href="#" class="contact-btn">Contrate Agora</a>
+      <p>Consertos de celulares e Notebook com profissionais especializados desde 1999, acessórios, peças, serviços de mão de obra com menor custo benefício, e ainda venda de celulares e Notebook usados, revisados e com garantia venha fazer seu orçamento sem compromisso!</p>
+      <a     href="#" class="contact-btn">orçamento </a>
     </div>
     <div class="img-headline">
          <img style="height: 300px; width: 300px; border-radius: 10px;  margin-top: 15px;"      src="fotos/loja.jpg">
