adicionando mais botoes

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Agência Fake</title>
 </head>
 <body>
-
-     <nav class="navbar" >
+     <nav class="navbar">       
 <div class="logo">
     <h1>Phone Parts</h1>
 </div>
+    
 <div class="menu">
-<a href="#">Home</a>
+
+<a href="#">Curso</a>
 <a href="#">Sobre nós</a>
-<a href="#">Serviços</a>
-<a href="#">Produtos</a>
+<a href="https://phone-parts.lojaintegrada.com.br/">Produtos</a>
 <a id="botao"   href="https://w.app/QFqjzl" target="_blank">Faça seu orçamento</a>
 </a>
 </div>
@@ -26,10 +26,11 @@
 <header class="header">
 
     <div class="headline">
-      <h2  style="letter-spacing: 15px; color: white;"   >Você achou a melhor</h2>
-      <h2  style="font-size: 60px;" >Assistecia Tecnica</h2>
+      <h2  style="letter-spacing: 15px; color: white;"   >Bem vindo a melhor</h2>
+      <h2  style="font-size: 60px;" >Assistecia Tecnica de Floripa</h2>
       <p>Consertos de celulares e Notebook com profissionais especializados desde 1999, acessórios, peças, serviços de mão de obra com menor custo benefício, e ainda venda de celulares e Notebook usados, revisados e com garantia venha fazer seu orçamento sem compromisso!</p>
       <a     href="#" class="contact-btn">orçamento </a>
+      <a     href="https://phone-parts.lojaintegrada.com.br/" class="contact-btn">produtos </a>
     </div>
     <div class="img-headline">
          <img style="height: 300px; width: 300px; border-radius: 10px;  margin-top: 15px;"      src="fotos/loja.jpg">
