--- a/index.html
+++ b/index.html
@@ -31,10 +31,42 @@
       <p>Consertos de celulares e Notebook com profissionais especializados desde 1999, acessórios, peças, serviços de mão de obra com menor custo benefício, e ainda venda de celulares e Notebook usados, revisados e com garantia venha fazer seu orçamento sem compromisso!</p>
       <a     href="#" class="contact-btn">orçamento </a>
       <a     href="https://phone-parts.lojaintegrada.com.br/" class="contact-btn">produtos </a>
+    </div><br>
+    <div class="slider">
+        <!--radion buttons-->
+        <div class="slides">
+
+        <input type="radio" name="radio-btn" id="radio1">
+        <input type="radio" name="radio-btn" id="radio2">
+        <input type="radio" name="radio-btn" id="radio3">
+        <!--fim radio buttons-->
+
+        <!--Slide imagens-->
+        <div class="slide first"><img src="fotos/foto1.webp" alt="imagem 1"> </div>
+
+        <div class="slide"><img src="fotos/foto2.jpg" alt="imagem 2"> </div>
+
+        <div class="slide "><img src="fotos/loja2.jpg" alt="imagem 3"> </div>
+        <!--fim slide imagens-->
+
+        <!-- navigation auto-->
+
+        <div class="navigation">
+        <div class="auto-btn1"></div>
+        <div class="auto-btn2"></div>
+        <div class="auto-btn3"></div>
+
+        </div>
+
     </div>
-    <div class="img-headline">
-         <img style="height: 300px; width: 300px; border-radius: 10px;  margin-top: 15px;"      src="fotos/loja.jpg">
-         <img style="height: 300px; width: 300px; border-radius: 10px; margin-top: 15px; "      src="fotos/loja2.jpg">
+      
+    <div class="manual-navigation">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+
+    </div>
+
 
     </div>
 </header>
@@ -80,10 +112,11 @@
 <footer>
 
     <div class="logo-rodape">
-<h1 class="agencia"   >Agência Fake</h1>
+<h1 class="agencia">Phone Parts</h1> 
+  
 <p style="color: white;">um site feito com HTML e CSS puro</p>
 </div>
-<b style="color: white;"> © todos os direotos reservados</b>
+<b style="color: white;"> © todos os direitos reservados a phone parts</b>
 </footer>
 
     
