--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="estilo.css">
 <link rel="stylesheet" href="responsivo.css">
 
-    <title>Agência Fake</title>
+    <title>Loja Phone Parts</title>
 </head>
 <body>
      <nav class="navbar">       
