--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </div><br>
     <div class="slider">
         <!--radion buttons-->
+        <p id="para">Venha conhecer nossa loja pessoalmente!</p>
         <div class="slides">
+            
 
         <input type="radio" name="radio-btn" id="radio1">
         <input type="radio" name="radio-btn" id="radio2">
